; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_dce6_available_bandwidth.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_dce6_available_bandwidth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dce6_wm_params = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dce6_wm_params*)* @dce6_available_bandwidth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dce6_available_bandwidth(%struct.dce6_wm_params* %0) #0 {
  %2 = alloca %struct.dce6_wm_params*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dce6_wm_params* %0, %struct.dce6_wm_params** %2, align 8
  %6 = load %struct.dce6_wm_params*, %struct.dce6_wm_params** %2, align 8
  %7 = call i32 @dce6_dram_bandwidth(%struct.dce6_wm_params* %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.dce6_wm_params*, %struct.dce6_wm_params** %2, align 8
  %9 = call i32 @dce6_data_return_bandwidth(%struct.dce6_wm_params* %8)
  store i32 %9, i32* %4, align 4
  %10 = load %struct.dce6_wm_params*, %struct.dce6_wm_params** %2, align 8
  %11 = call i32 @dce6_dmif_request_bandwidth(%struct.dce6_wm_params* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @min(i32 %13, i32 %14)
  %16 = call i32 @min(i32 %12, i32 %15)
  ret i32 %16
}

declare dso_local i32 @dce6_dram_bandwidth(%struct.dce6_wm_params*) #1

declare dso_local i32 @dce6_data_return_bandwidth(%struct.dce6_wm_params*) #1

declare dso_local i32 @dce6_dmif_request_bandwidth(%struct.dce6_wm_params*) #1

declare dso_local i32 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
